--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -26,7 +26,7 @@ body{
     background: #FFFFFF;
     min-width: 256px;
     max-width: 256px;
-    
+    transition: all 0.2s;
 }
 
 .sidebar{
@@ -99,6 +99,7 @@ body{
             }
         }
         &-message{
+            padding:19px 16px 19px 19px;
             border: 1px solid #D4D4D4;
             border-radius: 10%;
             
@@ -107,7 +108,7 @@ body{
             background: #FFFFFF;
             box-shadow: 0px 0px 16px rgba(136, 167, 245, 0.18);
             max-width: 256px;
-            padding: 10px 45px 10px 20px;
+            padding: 10px 30px 10px 20px;
             img{
                 border-radius: 50%;
                 border: 2px solid #D9D9D9;
@@ -183,12 +184,12 @@ body{
         line-height: 52px;
         border: 0;
         
+        
     }
     td{
 
         border: 0;
         font-weight: 500;
-        
         color: #6E6E6E;
 
     }
@@ -304,6 +305,60 @@ body{
     background: #B1B1B1;
 }
 
+
+@media(max-width:1200px){
+    .content{
+        &-management{
+            max-width: 99%;
+            &-block{
+                padding: 0px 10px;
+            }
+            &-action{
+                margin-top: 11px;
+                &-title{
+                    font-weight: 500;
+                    line-height: 21px;
+                    color: #343434;
+                    margin-bottom: 15px;
+                }
+            }
+        }
+    }
+    .table{
+        tr{
+            line-height: 30px;
+            border: 0;
+        }
+    }
+}
+
+@media (max-width:992px) and (min-width:768px){
+    .content{
+        &-management{
+            &-action{
+                
+                max-width: 250px;
+               align-items: center;
+                &-item{
+                    flex-wrap: wrap;
+                    justify-content: center;
+                }
+                button{
+                    display: flex;
+                    align-items: center;
+                    gap: 10%;
+                    padding: 8px 20px 8px 10px;
+                    border: none;
+                    font-size: 12px;
+                    
+                
+                }
+            }
+        }
+    }
+}
+
+
 @media(max-width:767px){
     #side_nav{
         margin-left: -300px;
@@ -314,8 +369,34 @@ body{
     #side_nav.active{
         margin-left: 0;
     }
-}
 
+    .content{
+        &-management{
+            &-action{
+                &-title{
+                    margin-bottom: 20px;
+                }
+                &-item{
+                    margin-bottom: 45px;
+                }
+                button{
+                    display: flex;
+                    align-items: center;
+                    gap: 5%;
+                    padding: 6px 10px 6px 6px;
+                    border: none;
+                    font-size: 12px;
+                
+                }
+            }
+        }
+    }
+
+
+}
+@media(max-width:576px){
+
+}
 
 @media(max-width:395px){
     .modal{
