--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,8 @@ body {
   background: #FFFFFF;
   min-width: 256px;
   max-width: 256px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .sidebar-menu-list li::before {
@@ -142,6 +144,7 @@ body {
   left: 0.3rem;
 }
 .content-header-message {
+  padding: 19px 16px 19px 19px;
   border: 1px solid #D4D4D4;
   border-radius: 10%;
 }
@@ -150,7 +153,7 @@ body {
   -webkit-box-shadow: 0px 0px 16px rgba(136, 167, 245, 0.18);
           box-shadow: 0px 0px 16px rgba(136, 167, 245, 0.18);
   max-width: 256px;
-  padding: 10px 45px 10px 20px;
+  padding: 10px 30px 10px 20px;
 }
 .content-header-user img {
   border-radius: 50%;
@@ -329,6 +332,54 @@ body {
   background: #B1B1B1;
 }
 
+@media (max-width: 1200px) {
+  .content-management {
+    max-width: 99%;
+  }
+  .content-management-block {
+    padding: 0px 10px;
+  }
+  .content-management-action {
+    margin-top: 11px;
+  }
+  .content-management-action-title {
+    font-weight: 500;
+    line-height: 21px;
+    color: #343434;
+    margin-bottom: 15px;
+  }
+  .table tr {
+    line-height: 30px;
+    border: 0;
+  }
+}
+@media (max-width: 992px) and (min-width: 768px) {
+  .content-management-action {
+    max-width: 250px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .content-management-action-item {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .content-management-action button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 10%;
+    padding: 8px 20px 8px 10px;
+    border: none;
+    font-size: 12px;
+  }
+}
 @media (max-width: 767px) {
   #side_nav {
     margin-left: -300px;
@@ -338,6 +389,24 @@ body {
   }
   #side_nav.active {
     margin-left: 0;
+  }
+  .content-management-action-title {
+    margin-bottom: 20px;
+  }
+  .content-management-action-item {
+    margin-bottom: 45px;
+  }
+  .content-management-action button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 5%;
+    padding: 6px 10px 6px 6px;
+    border: none;
+    font-size: 12px;
   }
 }
 @media (max-width: 395px) {
