--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -334,6 +334,10 @@ body{
 
 @media (max-width:992px) and (min-width:768px){
     .content{
+
+        
+
+
         &-management{
             &-action{
                 
@@ -360,6 +364,7 @@ body{
 
 
 @media(max-width:767px){
+    
     #side_nav{
         margin-left: -300px;
         position: fixed;
@@ -371,7 +376,26 @@ body{
     }
 
     .content{
+        &-header{
+            &-message{
+                padding:10px 6px 10px 10px;
+                border: 1px solid #D4D4D4;
+                border-radius: 10%;
+                
+            }
+            &-user{
+                background: #FFFFFF;
+                box-shadow: 0px 0px 16px rgba(136, 167, 245, 0.18);
+                max-width: 240px;
+                padding: 2px 20px 2px 15px;
+                img{
+                    border-radius: 50%;
+                    border: 2px solid #D9D9D9;
+                }
+            }
+        }
         &-management{
+            
             &-action{
                 &-title{
                     margin-bottom: 20px;
@@ -394,8 +418,27 @@ body{
 
 
 }
-@media(max-width:576px){
-
+@media(max-width:650px){
+  
+    .content{
+        &-management{
+            &-action{
+            align-items: center;
+                &-item{
+                    flex-wrap: wrap;
+                    justify-content: center;
+                }
+                button{
+                    display: flex;
+                    align-items: center;
+                    gap: 10%;
+                    padding: 8px 20px 8px 10px;
+                    border: none;
+                    font-size: 12px;
+                }
+            }
+        }
+    }
 }
 
 @media(max-width:395px){
